; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_data_restore_add.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_data_restore_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @data_restore_add(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %6, align 4
  %14 = call i64 @map_int_vptr_add(i32* %12, i32 %13)
  %15 = inttoptr i64 %14 to i32**
  store i32** %15, i32*** %7, align 8
  %16 = load i32**, i32*** %7, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %3
  %20 = load i32, i32* %6, align 4
  %21 = call i32* @restore_list_alloc(i32 %20)
  %22 = load i32**, i32*** %7, align 8
  store i32* %21, i32** %22, align 8
  br label %23

23:                                               ; preds = %19, %3
  %24 = load i32**, i32*** %7, align 8
  %25 = load i32*, i32** %24, align 8
  store i32* %25, i32** %8, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %5, align 4
  %29 = call i64 @map_int_vptr_get(i32* %27, i32 %28)
  %30 = inttoptr i64 %29 to i32**
  store i32** %30, i32*** %9, align 8
  %31 = load i32**, i32*** %9, align 8
  %32 = icmp eq i32** %31, null
  br i1 %32, label %33, label %36

33:                                               ; preds = %23
  %34 = load i32, i32* %5, align 4
  %35 = call i32* @restore_list_alloc(i32 %34)
  store i32* %35, i32** %10, align 8
  br label %43

36:                                               ; preds = %23
  %37 = load i32**, i32*** %9, align 8
  %38 = load i32*, i32** %37, align 8
  store i32* %38, i32** %10, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i32, i32* %5, align 4
  %42 = call i32 @map_int_vptr_del(i32* %40, i32 %41)
  br label %43

43:                                               ; preds = %36, %33
  %44 = load i32*, i32** %8, align 8
  %45 = load i32*, i32** %10, align 8
  %46 = call i32 @restore_list_append(i32* %44, i32* %45)
  ret void
}

declare dso_local i64 @map_int_vptr_add(i32*, i32) #1

declare dso_local i32* @restore_list_alloc(i32) #1

declare dso_local i64 @map_int_vptr_get(i32*, i32) #1

declare dso_local i32 @map_int_vptr_del(i32*, i32) #1

declare dso_local i32 @restore_list_append(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
